--- a/tutorial/tutorial2.html
+++ b/tutorial/tutorial2.html
@@ -250,8 +250,9 @@ amount of the its functionality to add some simple formatting:</p>
 </span><span class="boring">    Ok(())
 </span><span class="boring">}</span></code></pre>
 <p>We can use these formats in worksheet methods that support formatting such as
-the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_string"><code>worksheet.write_string()</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_number"><code>worksheet.write_number()</code></a> methods which
-can write data and formatting together.</p>
+the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_string_with_format"><code>worksheet.write_string_with_format()</code></a> and
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.write_number_with_format"><code>worksheet.write_number_with_format()</code></a> methods which can write data and
+formatting together.</p>
 
                     </main>
 
