--- a/workbook/checksum.html
+++ b/workbook/checksum.html
@@ -233,7 +233,7 @@ $ cargo run --example doc_properties_checksum2
 $ sum properties.xlsx
 8914 6 properties.xlsx # Same as previous
 </code></pre>
-<p>For more details see <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Properties.html"><code>Properties</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.set_properties"><code>workbook::set_properties()</code></a>.</p>
+<p>For more details see <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.DocProperties.html"><code>DocProperties</code></a> and <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Workbook.html#method.set_properties"><code>workbook::set_properties()</code></a>.</p>
 
                     </main>
 
