--- a/worksheet/protection.html
+++ b/worksheet/protection.html
@@ -287,7 +287,7 @@ protected. The default Excel options are:</p>
 <p>Almost all the options are protected by default apart from &quot;Select locked cells&quot;
 and &quot;Select unlocked cells&quot;.</p>
 <p>If you wish to turn on or off any of these options you can use the
-<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ProtectWorksheetOptions.html"><code>ProtectWorksheetOptions</code></a> struct and the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.protect_with_options"><code>worksheet.protect_with_options()</code></a>
+<a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.ProtectionOptions.html"><code>ProtectionOptions</code></a> struct and the <a href="https://docs.rs/rust_xlsxwriter/latest/rust_xlsxwriter/struct.Worksheet.html#method.protect_with_options"><code>worksheet.protect_with_options()</code></a>
 method. For example:</p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">//
