--- a/examples/chart_styles.html
+++ b/examples/chart_styles.html
@@ -179,6 +179,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
             for col_num in (0..64).step_by(8) {
                 chart.set_style(style);
                 chart.title().set_name(&amp;format!(&quot;Style {style}&quot;));
+                chart.legend().set_hidden();
                 worksheet.insert_chart(row_num as u32, col_num as u16, &amp;chart)?;
                 style += 1;
             }
