--- a/print.html
+++ b/print.html
@@ -9899,6 +9899,8 @@ workbook.close()
 </code></pre>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
+<h2 id="0301---2023-03-31"><a class="header" href="#0301---2023-03-31">[0.30.1] - 2023-03-31</a></h2>
+<p>Fixed broken Changelog link.</p>
 <h2 id="0300---2023-03-31"><a class="header" href="#0300---2023-03-31">[0.30.0] - 2023-03-31</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
