--- a/examples/colors.html
+++ b/examples/colors.html
@@ -263,7 +263,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
 
             let mut font_color = XlsxColor::White;
             if col == 0 {
-                font_color = XlsxColor::Automatic;
+                font_color = XlsxColor::Default;
             }
 
             let color_format = Format::new()
