--- a/formulas/dynamic_arrays.html
+++ b/formulas/dynamic_arrays.html
@@ -419,10 +419,10 @@ values that can vary in size depending on the the filter results:</p>
 </span><span class="boring">        (&quot;South&quot;, &quot;Hector&quot;, &quot;Apple&quot;, 9814),
 </span><span class="boring">    ];
 </span><span class="boring">
-</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Sales Rep&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Product&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Units&quot;, &amp;header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Sales Rep&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Product&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Units&quot;, header)?;
 </span><span class="boring">
 </span><span class="boring">    let mut row = 1;
 </span><span class="boring">    for data in worksheet_data.iter() {
@@ -718,10 +718,10 @@ function which only requires the start cell:</p>
 </span><span class="boring">        (&quot;South&quot;, &quot;Hector&quot;, &quot;Apple&quot;, 9814),
 </span><span class="boring">    ];
 </span><span class="boring">
-</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Sales Rep&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Product&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Units&quot;, &amp;header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Sales Rep&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Product&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Units&quot;, header)?;
 </span><span class="boring">
 </span><span class="boring">    let mut row = 1;
 </span><span class="boring">    for data in worksheet_data.iter() {
@@ -1042,10 +1042,10 @@ following formula:</p>
 </span><span class="boring">        (&quot;South&quot;, &quot;Hector&quot;, &quot;Apple&quot;, 9814),
 </span><span class="boring">    ];
 </span><span class="boring">
-</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Sales Rep&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Product&quot;, &amp;header)?;
-</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Units&quot;, &amp;header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 0, &quot;Region&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 1, &quot;Sales Rep&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 2, &quot;Product&quot;, header)?;
+</span><span class="boring">    worksheet.write_string_with_format(0, 3, &quot;Units&quot;, header)?;
 </span><span class="boring">
 </span><span class="boring">    let mut row = 1;
 </span><span class="boring">    for data in worksheet_data.iter() {
