--- a/examples/doughnut_chart.html
+++ b/examples/doughnut_chart.html
@@ -146,6 +146,8 @@
 <p><strong>Image of the output file:</strong></p>
 <p>Chart 1 in the following example is a default doughnut chart:
 <img src="../../images/chart_doughnut1.png" alt="Image of output chart example" /></p>
+<p>Chart 4 shows how to set segment colors and other options.</p>
+<p><img src="../../images/chart_doughnut2.png" alt="Image of output chart example" /></p>
 <p><strong>Code to generate the output file:</strong></p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">//
@@ -177,7 +179,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // -----------------------------------------------------------------------
     let mut chart = Chart::new(ChartType::Doughnut);
 
-    // Configure the first data series for the chart.
+    // Configure the data series for the chart.
     chart
         .add_series()
         .set_categories(&quot;Sheet1!$A$2:$A$4&quot;)
@@ -191,7 +193,81 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     chart.set_style(10);
 
     // Add the chart to the worksheet.
-    worksheet.insert_chart_with_offset(1, 3, &amp;chart, 25, 10)?;
+    worksheet.insert_chart_with_offset(1, 2, &amp;chart, 25, 10)?;
+
+    // -----------------------------------------------------------------------
+    // Create a Doughnut chart with user defined segment colors.
+    // -----------------------------------------------------------------------
+    let mut chart = Chart::new(ChartType::Doughnut);
+
+    // Configure the data series for the chart.
+    chart
+        .add_series()
+        .set_categories(&quot;Sheet1!$A$2:$A$4&quot;)
+        .set_values(&quot;Sheet1!$B$2:$B$4&quot;)
+        .set_name(&quot;Doughnut sales data&quot;)
+        .set_point_colors(&amp;[&quot;#FA58D0&quot;, &quot;#61210B&quot;, &quot;#F5F6CE&quot;]);
+
+    // Add a chart title.
+    chart
+        .title()
+        .set_name(&quot;Doughnut Chart with user defined colors&quot;);
+
+    // Add the chart to the worksheet.
+    worksheet.insert_chart_with_offset(17, 2, &amp;chart, 25, 10)?;
+
+    // -----------------------------------------------------------------------
+    // Create a Doughnut chart with rotation of the segments.
+    // -----------------------------------------------------------------------
+    let mut chart = Chart::new(ChartType::Doughnut);
+
+    // Configure the data series for the chart.
+    chart
+        .add_series()
+        .set_categories(&quot;Sheet1!$A$2:$A$4&quot;)
+        .set_values(&quot;Sheet1!$B$2:$B$4&quot;)
+        .set_name(&quot;Doughnut sales data&quot;);
+
+    // Change the angle/rotation of the first segment.
+    chart.set_rotation(90);
+
+    // Add a chart title.
+    chart
+        .title()
+        .set_name(&quot;Doughnut Chart with segment rotation&quot;);
+
+    // Add the chart to the worksheet.
+    worksheet.insert_chart_with_offset(33, 2, &amp;chart, 25, 10)?;
+
+    // -----------------------------------------------------------------------
+    // Create a Doughnut chart with user defined hole size and other options.
+    // -----------------------------------------------------------------------
+    let mut chart = Chart::new(ChartType::Doughnut);
+
+    // Configure the data series for the chart.
+    chart
+        .add_series()
+        .set_categories(&quot;Sheet1!$A$2:$A$4&quot;)
+        .set_values(&quot;Sheet1!$B$2:$B$4&quot;)
+        .set_name(&quot;Doughnut sales data&quot;)
+        .set_point_colors(&amp;[&quot;#FA58D0&quot;, &quot;#61210B&quot;, &quot;#F5F6CE&quot;]);
+
+    // Add a chart title.
+    chart
+        .title()
+        .set_name(&quot;Doughnut Chart with options applied&quot;);
+
+    // Change the angle/rotation of the first segment.
+    chart.set_rotation(28);
+
+    // Change the hole size.
+    chart.set_hole_size(33);
+
+    // Set a 3D style.
+    chart.set_style(26);
+
+    // Add the chart to the worksheet.
+    worksheet.insert_chart_with_offset(49, 2, &amp;chart, 25, 10)?;
 
     workbook.save(&quot;chart_doughnut.xlsx&quot;)?;
 
