--- a/examples/pie_chart.html
+++ b/examples/pie_chart.html
@@ -146,6 +146,14 @@
 <p><strong>Image of the output file:</strong></p>
 <p>Chart 1 in the following example is a default pie chart:
 <img src="../../images/chart_pie1.png" alt="Image of output chart example" /></p>
+<p>Chart 2 shows how to set segment colors.</p>
+<p>It is possible to define chart colors for most types of rust_xlsxwriter charts via
+the <code>add_series()</code> method. However, Pie charts are a special case since each
+segment is represented as a point and as such it is necessary to assign
+formatting to each point in the series.
+<img src="../../images/chart_pie2.png" alt="Image of output chart example" /></p>
+<p>Chart 3 shows how to rotate the segments of the chart:
+<img src="../../images/chart_pie3.png" alt="Image of output chart example" /></p>
 <p><strong>Code to generate the output file:</strong></p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">//
@@ -177,7 +185,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     // -----------------------------------------------------------------------
     let mut chart = Chart::new(ChartType::Pie);
 
-    // Configure the first data series for the chart.
+    // Configure the data series for the chart.
     chart
         .add_series()
         .set_categories(&quot;Sheet1!$A$2:$A$4&quot;)
@@ -191,7 +199,47 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     chart.set_style(10);
 
     // Add the chart to the worksheet.
-    worksheet.insert_chart_with_offset(1, 3, &amp;chart, 25, 10)?;
+    worksheet.insert_chart_with_offset(1, 2, &amp;chart, 25, 10)?;
+
+    // -----------------------------------------------------------------------
+    // Create a Pie chart with user defined segment colors.
+    // -----------------------------------------------------------------------
+    let mut chart = Chart::new(ChartType::Pie);
+
+    // Configure the data series for the chart.
+    chart
+        .add_series()
+        .set_categories(&quot;Sheet1!$A$2:$A$4&quot;)
+        .set_values(&quot;Sheet1!$B$2:$B$4&quot;)
+        .set_name(&quot;Pie sales data&quot;)
+        .set_point_colors(&amp;[&quot;#5ABA10&quot;, &quot;#FE110E&quot;, &quot;#CA5C05&quot;]);
+
+    // Add a chart title.
+    chart.title().set_name(&quot;Pie Chart with user defined colors&quot;);
+
+    // Add the chart to the worksheet.
+    worksheet.insert_chart_with_offset(17, 2, &amp;chart, 25, 10)?;
+
+    // -----------------------------------------------------------------------
+    // Create a Pie chart with rotation of the segments.
+    // -----------------------------------------------------------------------
+    let mut chart = Chart::new(ChartType::Pie);
+
+    // Configure the data series for the chart.
+    chart
+        .add_series()
+        .set_categories(&quot;Sheet1!$A$2:$A$4&quot;)
+        .set_values(&quot;Sheet1!$B$2:$B$4&quot;)
+        .set_name(&quot;Pie sales data&quot;);
+
+    // Change the angle/rotation of the first segment.
+    chart.set_rotation(90);
+
+    // Add a chart title.
+    chart.title().set_name(&quot;Pie Chart with segment rotation&quot;);
+
+    // Add the chart to the worksheet.
+    worksheet.insert_chart_with_offset(33, 2, &amp;chart, 25, 10)?;
 
     workbook.save(&quot;chart_pie.xlsx&quot;)?;
 
