--- a/examples/simple_chart.html
+++ b/examples/simple_chart.html
@@ -167,7 +167,7 @@ fn main() -&gt; Result&lt;(), XlsxError&gt; {
     }
 
     // -----------------------------------------------------------------------
-    // Create a simple Column chart.
+    // Create a new chart.
     // -----------------------------------------------------------------------
     let mut chart = Chart::new(ChartType::Column);
 
