--- a/performance.html
+++ b/performance.html
@@ -146,26 +146,48 @@
 (<a href="https://libxlsxwriter.github.io">libxlsxwriter</a>), Python (<a href="https://xlsxwriter.readthedocs.io/index.html">XlsxWriter</a>) and Perl (<a href="https://metacpan.org/dist/Excel-Writer-XLSX/view/lib/Excel/Writer/XLSX.pm">Excel::Writer::XLSX</a>).</p>
 <p>A <a href="https://lib.rs/crates/hyperfine">hyperfine</a> performance comparison between the C, Rust and Python versions is
 shown below. The Perl performance is similar to the Python library.</p>
-<pre><code>$ hyperfine target/release/examples/app_perf_test ./c_perf_test &quot;python py_perf_test.py&quot;
-Benchmark 1: target/release/examples/app_perf_test
-  Time (mean ± σ):     447.2 ms ±   8.3 ms    [User: 402.8 ms, System: 39.4 ms]
-  Range (min … max):   431.5 ms … 460.7 ms    10 runs
+<pre><code>$ hyperfine ./app_perf_test ./c_perf_test &quot;python py_perf_test.py&quot; --warmup 3
+Benchmark 1: ./app_perf_test
+  Time (mean ± σ):     233.6 ms ±   1.6 ms    [User: 216.0 ms, System: 15.7 ms]
+  Range (min … max):   230.7 ms … 235.7 ms    12 runs
 
 Benchmark 2: ./c_perf_test
-  Time (mean ± σ):     362.5 ms ±   6.4 ms    [User: 305.2 ms, System: 53.0 ms]
-  Range (min … max):   353.2 ms … 371.9 ms    10 runs
+  Time (mean ± σ):     197.2 ms ±   2.0 ms    [User: 163.1 ms, System: 28.4 ms]
+  Range (min … max):   194.5 ms … 201.0 ms    14 runs
 
 Benchmark 3: python py_perf_test.py
-  Time (mean ± σ):      2.899 s ±  0.023 s    [User: 2.787 s, System: 0.088 s]
-  Range (min … max):    2.868 s …  2.934 s    10 runs
+  Time (mean ± σ):      1.099 s ±  0.011 s    [User: 1.051 s, System: 0.041 s]
+  Range (min … max):    1.085 s …  1.125 s    10 runs
 
 Summary
   './c_perf_test' ran
-    1.23 ± 0.03 times faster than 'target/release/examples/app_perf_test'
-    8.00 ± 0.16 times faster than 'python py_perf_test.py'
+    1.18 ± 0.01 times faster than './app_perf_test'
+    5.57 ± 0.08 times faster than 'python py_perf_test.py'
 </code></pre>
 <p>Or in other words, the C version is the fastest and if we take that as 1 then
-the rust version is 1.2x (or 20%) slower and the Python version is 8x slower.</p>
+the rust version is 1.18x (or 18%) slower and the Python version is 5.5x slower.</p>
+<p>The <code>rust_xlsxwriter</code> library also has an optional compilation &quot;feature&quot; called
+<code>zlib</code> which will allow it (via ZipWriter) to use compression from a native C
+library. This improves the performance on large files significantly and even
+beats the C/libxlsxwriter version:</p>
+<pre><code>$ hyperfine ./app_perf_test ./app_perf_test_zlib ./c_perf_test --warmup 3
+Benchmark 1: ./app_perf_test
+  Time (mean ± σ):     244.3 ms ±  10.5 ms    [User: 221.5 ms, System: 18.1 ms]
+  Range (min … max):   231.8 ms … 259.8 ms    11 runs
+
+Benchmark 2: ./app_perf_test_zlib
+  Time (mean ± σ):     149.4 ms ±  10.5 ms    [User: 129.5 ms, System: 16.1 ms]
+  Range (min … max):   140.7 ms … 178.5 ms    18 runs
+
+Benchmark 3: ./c_perf_test
+  Time (mean ± σ):     197.7 ms ±   2.3 ms    [User: 163.4 ms, System: 28.4 ms]
+  Range (min … max):   195.4 ms … 204.5 ms    14 runs
+
+Summary
+  './app_perf_test_zlib' ran
+    1.32 ± 0.09 times faster than './c_perf_test'
+    1.63 ± 0.13 times faster than './app_perf_test'
+</code></pre>
 <p>As with any performance test there are a lot of factors that may affect the
 results, however these results are indicative of the relative performance.</p>
 <p>The programs used to generate these results are shown below.</p>
