--- a/getting_started.html
+++ b/getting_started.html
@@ -159,16 +159,7 @@ will start with a small sample application.</p>
 <pre><code class="language-bash">$ cd hello-xlsx
 $ cargo add rust_xlsxwriter
 </code></pre>
-<p>This will give you an updated <code>Cargo.toml</code> file that looks something like this:</p>
-<pre><code class="language-toml">[package]
-name = &quot;hello-xlsx&quot;
-version = &quot;0.1.0&quot;
-edition = &quot;2021&quot;
-
-[dependencies]
-rust_xlsxwriter = &quot;0.35.0
-</code></pre>
-<p>Modify the main.rs file so it looks like this:</p>
+<p>Modify the <code>src/main.rs</code> file so it looks like this:</p>
 <pre><code class="language-rust"><span class="boring">// SPDX-License-Identifier: MIT OR Apache-2.0
 </span><span class="boring">//
 </span><span class="boring">// Copyright 2022-2023, John McNamara, jmcnamara@cpan.org
