--- a/changelog.html
+++ b/changelog.html
@@ -143,6 +143,8 @@
                     <main>
                         <h1 id="release-notes"><a class="header" href="#release-notes">Release Notes</a></h1>
 <p>This section show the feature additions, changes and bug fixes in rust_xlsxwriter.</p>
+<h2 id="0361---2023-04-18"><a class="header" href="#0361---2023-04-18">[0.36.1] - 2023-04-18</a></h2>
+<p>Fix cargo/release issue with 0.36.0 release. Use this version instead.</p>
 <h2 id="0360---2023-04-18"><a class="header" href="#0360---2023-04-18">[0.36.0] - 2023-04-18</a></h2>
 <h3 id="added"><a class="header" href="#added">Added</a></h3>
 <ul>
